force-app/main/default/objects/Case/fields/Additional_Info_Request__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info_Request__c</fullName>
    <label>Información Adicional Solicitada</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>