force-app/main/default/objects/Case/fields/Analysis__c.field-meta.xml
<CustomField>
    <fullName>Analysis__c</fullName>
    <label>Análisis</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>