force-app/main/default/objects/Case/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <label>Subtipo de Caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Case_Subtype_Values</valueSetName>
    </valueSet>
</CustomField>