force-app/main/default/objects/Case/fields/Entry_Channel__c.field-meta.xml
<CustomField>
    <fullName>Entry_Channel__c</fullName>
    <label>Canal de Ingreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Origin_Channel_Values</valueSetName>
    </valueSet>
</CustomField>