force-app/main/default/objects/Case/fields/Final_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Final_Resolution__c</fullName>
    <label>Resolución Final</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>