force-app/main/default/objects/Case/fields/Internal_Observations__c.field-meta.xml
<CustomField>
    <fullName>Internal_Observations__c</fullName>
    <label>Observaciones Internas</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>