force-app/main/default/objects/Case/fields/Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica si ya se envió la notificación al cliente con la resolución del caso.</description>
    <inlineHelpText>Se marca automáticamente cuando se envía la notificación de cierre del caso.</inlineHelpText>
    <label>Notificación Enviada</label>
    <type>Checkbox</type>
</CustomField>